# RQADeforestation.py

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: pypi-release.yaml  python-publish.yml
rqadeforestation/: __init__.py
